@@ -1,3 +1,7 @@
+Thu Oct 10 21:36:16 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* array.c (rb_ary_compact_bang): use ary_resize_smaller().
+
 Thu Oct 10 21:00:38 2013  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* st.c (st_keys): define st_keys() for performance improvement of
